includes new imports

--- a/localization_ws/src/localization/CMakeLists.txt
+++ b/localization_ws/src/localization/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 project(localization)
+set(LIBRARY_NAME libs)  # Adjust the library name as needed
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -14,19 +15,47 @@ find_package(cv_bridge REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(rcl_interfaces REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-
-add_executable(pipeline src/pipeline.cpp)
-include_directories(
-  include
-  ${OpenCV_INCLUDE_DIRS}
-  ${cv_bridge_INCLUDE_DIRS}
+add_library(${LIBRARY_NAME}
+  src/rndgeneration.cpp
+  src/linepoints.cpp
+  src/realmap_location.cpp
+  src/utilities.cpp
+  src/gradient_descent.cpp
+  src/rndgeneration.hpp
+  src/linepoints.hpp
+  src/realmap_location.hpp
+  src/utilities.hpp
+  src/gradient_descent.hpp
+  src/point.hpp
+  src/raw_points.hpp
 )
-ament_target_dependencies(pipeline "cv_bridge")
-target_include_directories(pipeline PUBLIC
+add_executable(pipeline src/pipeline.cpp)
+
+# Include directories for common headers
+include_directories(include)
+
+ament_target_dependencies(${LIBRARY_NAME}
+  "cv_bridge"
+  "rclcpp"
+  "std_msgs"
+  "sensor_msgs"
+  "OpenCV"
+  "rcl_interfaces"
+  "Eigen3"
+  "ament_cmake"
+  "nav_msgs"
+  "tf2"
+  "tf2_geometry_msgs"
+)
+
+target_include_directories(${LIBRARY_NAME} PUBLIC
   ${rclcpp_INCLUDE_DIRS}
   ${std_msgs_INCLUDE_DIRS}
   ${sensor_msgs_INCLUDE_DIRS}
@@ -34,33 +63,35 @@ target_include_directories(pipeline PUBLIC
   ${ament_INCLUDE_DIRS}
   ${cv_bridge_INCLUDE_DIRS}
   ${rcl_interfaces_INCLUDE_DIRS}
-  ${Eigen3_INCLUDE_DIRS} 
+  ${Eigen3_INCLUDE_DIRS}
+  ${nav_msgs_INCLUDE_DIRS}
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
+  $<INSTALL_INTERFACE:include>
+)
+
+target_include_directories(pipeline PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
 target_compile_features(pipeline PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 
 target_link_libraries(pipeline
+  ${LIBRARY_NAME}  # Link against the library
   ${OpenCV_LIBRARIES}
   ${ament_LIBRARIES}
   ${cv_bridge_LIBRARIES}
-  Eigen3::Eigen  # Add if you are using Eigen library
+  Eigen3::Eigen
 )
 
 install(TARGETS pipeline
-  DESTINATION lib/${PROJECT_NAME})
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
 ament_package()
-
